test-package-compiler/tests/snapshots/compiler_tests__class_var_single_mutation_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [
        ClassDefinition {
            name: Identifier {
                name: "SingleClassVarCtr",
                span: Span {
                    start: 408,
                    end: 425,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Actor",
                    span: Span {
                        start: 392,
                        end: 397,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Actor,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [],
            class_methods: [
                MethodDefinition {
                    selector: Unary(
                        "bump",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: Assignment {
                                target: FieldAccess {
                                    receiver: Identifier(
                                        Identifier {
                                            name: "self",
                                            span: Span {
                                                start: 471,
                                                end: 475,
                                            },
                                        },
                                    ),
                                    field: Identifier {
                                        name: "total",
                                        span: Span {
                                            start: 476,
                                            end: 481,
                                        },
                                    },
                                    span: Span {
                                        start: 471,
                                        end: 481,
                                    },
                                },
                                value: MessageSend {
                                    receiver: FieldAccess {
                                        receiver: Identifier(
                                            Identifier {
                                                name: "self",
                                                span: Span {
                                                    start: 485,
                                                    end: 489,
                                                },
                                            },
                                        ),
                                        field: Identifier {
                                            name: "total",
                                            span: Span {
                                                start: 490,
                                                end: 495,
                                            },
                                        },
                                        span: Span {
                                            start: 485,
                                            end: 495,
                                        },
                                    },
                                    selector: Binary(
                                        "+",
                                    ),
                                    arguments: [
                                        Literal(
                                            Integer(
                                                1,
                                            ),
                                            Span {
                                                start: 498,
                                                end: 499,
                                            },
                                        ),
                                    ],
                                    is_cast: false,
                                    span: Span {
                                        start: 485,
                                        end: 499,
                                    },
                                },
                                type_annotation: None,
                                span: Span {
                                    start: 471,
                                    end: 499,
                                },
                            },
                            preceding_blank_line: false,
                        },
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: FieldAccess {
                                receiver: Identifier(
                                    Identifier {
                                        name: "self",
                                        span: Span {
                                            start: 504,
                                            end: 508,
                                        },
                                    },
                                ),
                                field: Identifier {
                                    name: "total",
                                    span: Span {
                                        start: 509,
                                        end: 514,
                                    },
                                },
                                span: Span {
                                    start: 504,
                                    end: 514,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: true,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 453,
                        end: 514,
                    },
                },
            ],
            class_variables: [
                StateDeclaration {
                    name: Identifier {
                        name: "total",
                        span: Span {
                            start: 440,
                            end: 445,
                        },
                    },
                    type_annotation: None,
                    default_value: Some(
                        Literal(
                            Integer(
                                0,
                            ),
                            Span {
                                start: 448,
                                end: 449,
                            },
                        ),
                    ),
                    declared_keyword: State,
                    slot_kind: Eager,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 428,
                        end: 449,
                    },
                },
            ],
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 392,
                            end: 397,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 392,
                            end: 397,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "BT-3130 (ADR 0111 Phase A3): threading-mode matrix — a single class-var",
                        span: Span {
                            start: 392,
                            end: 397,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "mutation, read back immediately. The minimal byte-parity anchor for",
                        span: Span {
                            start: 392,
                            end: 397,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "`ClassVars`/`ClassVars1` + the ADR 0110 shadow-write, distinct from the",
                        span: Span {
                            start: 392,
                            end: 397,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "multi-mutation peers (`class_var_sequential_mutations`,",
                        span: Span {
                            start: 392,
                            end: 397,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "`class_var_multi_field_mutations`).",
                        span: Span {
                            start: 392,
                            end: 397,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: true,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            span: Span {
                start: 392,
                end: 514,
            },
        },
    ],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [],
    span: Span {
        start: 392,
        end: 514,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
